@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2015/04/16 08:04:37 wiz Exp $
+$NetBSD: distinfo,v 1.1 2015/05/07 12:26:12 wiz Exp $
 
 SHA1 (Attic-0.15.tar.gz) = 07b604e4c0a00e163122855403a3f0e70b7d1cd4
 RMD160 (Attic-0.15.tar.gz) = ccb2bd574b921eb1078e23cc5b3f5197336a11de
